feat: implemented API methods

--- a/src/theme/custom.scss
+++ b/src/theme/custom.scss
@@ -3,8 +3,8 @@ $white: #fff;
 $alpha: #17172d;
 $beta: #2d2d41;
 $primary: #8cbaff;
-$danger: #ff3e3e;
-$success: #1fdb00;
+$danger: #dc3545;
+$success: #198754;
 
 // Font sizes below:
 $font-sizes: (
